fix(package.json): Correct `main file path` in package.json.
[BRANCH: master]

--- a/src/spacing.css
+++ b/src/spacing.css
@@ -1,4 +1,4 @@
-/*! spacing.init.css | MIT License | brikcss  <https://github.com/brikcss> */
+/*! spacing.css | MIT License | brikcss  <https://github.com/brikcss> */
 
 /** Auto generated classes.
     ============================================================================================= */
